--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "typescript": "^5.4.4"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3"
+    "bootstrap": "^5.3.3",
+    "ejs": "^3.1.10",
+    "express": "^4.19.2"
   }
 }
