--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "ejs": "^3.1.10",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "fastify": "^4.28.1",
+    "nodemon": "^3.1.4"
   }
 }
